--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,15 @@ readme = "README.md"
 python = "^3.12"
 django = "4.2.2"
 djangorestframework = "^3.15.2"
+load-dotenv = "^0.1.0"
+python-dotenv = "^1.0.1"
+psycopg2-binary = "^2.9.10"
+pillow = "^11.1.0"
 
+
+[tool.poetry.group.lint.dependencies]
+black = "^25.1.0"
+isort = "^6.0.1"
 
 [build-system]
 requires = ["poetry-core"]
