--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ load-dotenv = "^0.1.0"
 python-dotenv = "^1.0.1"
 psycopg2-binary = "^2.9.10"
 pillow = "^11.1.0"
+django-filter = "^25.1"
 
 
 [tool.poetry.group.lint.dependencies]
