--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ python-dotenv = "^1.0.1"
 psycopg2-binary = "^2.9.10"
 pillow = "^11.1.0"
 django-filter = "^25.1"
+djangorestframework-simplejwt = "^5.5.0"
 
 
 [tool.poetry.group.lint.dependencies]
