--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ psycopg2-binary = "^2.9.10"
 pillow = "^11.1.0"
 django-filter = "^25.1"
 djangorestframework-simplejwt = "^5.5.0"
+coverage = "^7.6.12"
 
 
 [tool.poetry.group.lint.dependencies]
