--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,8 @@ pillow = "^11.1.0"
 django-filter = "^25.1"
 djangorestframework-simplejwt = "^5.5.0"
 coverage = "^7.6.12"
+drf-yasg = "^1.21.10"
+stripe = "^11.6.0"
 
 
 [tool.poetry.group.lint.dependencies]
