--- a/.env.sample
+++ b/.env.sample
@@ -6,6 +6,8 @@ PASSWORD=PASSWORD
 HOST=HOST
 PORT=PORT
 
+STRIPE_API_KEY=STRIPE_API_KEY
+
 EMAIL_HOST=EMAIL_HOST
 EMAIL_PORT=EMAIL_PORT
 EMAIL_HOST_USER=EMAIL_HOST_USER
