--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ pillow = "^11.1.0"
 django-filter = "^25.1"
 djangorestframework-simplejwt = "^5.5.0"
 coverage = "^7.6.12"
+celery = "^5.4.0"
 
 
 [tool.poetry.group.lint.dependencies]
