--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,6 +8,27 @@ jobs:
     env:
       SECRET_KEY: ${{ secrets.SECRET_KEY }}
       DJANGO_SETTINGS_MODULE: "config.settings"
+      DB_NAME: DB_NAME
+      DB_USER: DB_USER
+      DB_PASSWORD: DB_PASSWORD
+      DB_HOST: DB_HOST
+      DB_PORT: DB_PORT
+
+    services:
+      postgres:
+        image: postgres:13
+        env:
+          POSTGRES_DB: mydatabase
+          POSTGRES_USER: postgres
+          POSTGRES_PASSWORD: mypassword
+        ports:
+          - 5432:5432
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+
     steps:
       - name: Check out code
         uses: actions/checkout@v3
@@ -33,6 +54,18 @@ jobs:
       - name: Create .env file
         run: |
           echo "SECRET_KEY=$SECRET_KEY" > .env
+          echo "POSTGRES_DB=$POSTGRES_DB" >> .env
+          echo "POSTGRES_USER=$POSTGRES_USER" >> .env
+          echo "POSTGRES_PASSWORD=$POSTGRES_PASSWORD" >> .env
+          echo "DB_HOST=$DB_HOST" >> .env
+          echo "DB_PORT=$DB_PORT" >> .env
+
+      - name: Wait for PostgreSQL
+        run: |
+          until pg_isready -h localhost -p 5432; do
+            echo "Waiting for PostgreSQL..."
+            sleep 1
+          done
 
       - name: Run migrations
         run: python manage.py migrate
