--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,90 +1,75 @@
-name: Module8
+version: '3.9'
 
-on: [push, pull_request]
+services:
 
-jobs:
-  test:
-    runs-on: ubuntu-latest
+  redis:
+    image: redis:latest
+    restart: on-failure
+    expose:
+      - '6379'
 
-    services:
-      postgres:
-        image: postgres:16-alpine
-        env:
-          POSTGRES_DB: django_project
-          POSTGRES_USER: postgres
-          POSTGRES_PASSWORD: ${{ secrets.DB_PASSWORD }}
-        ports:
-          - 5432:5432
-        options: >-
-          --health-cmd="pg_isready -U postgres"
-          --health-interval=10s
-          --health-timeout=5s
-          --health-retries=5
+  db:
+    image: postgres:16-alpine
+    restart: on-failure
+    env_file:
+      - .env
+    environment:
+      DB_NAME: ${DB_NAME}
+      DB_USER: ${DB_USER}
+      DB_PASSWORD: ${DB_PASSWORD}
+    expose:
+      - '5432'
+    volumes:
+      - ./pg_data:/var/lib/postgresql/data
+    healthcheck:
+      test: ['CMD-SHELL', 'pg_isready -U ${DB_USER}']
+      interval: 10s
+      retries: 5
+      timeout: 5s
 
+  web:
+    build: .
+    command: >
+      sh -c "
+        python manage.py migrate &&
+        python manage.py collectstatic --noinput &&
+        python manage.py runserver 0.0.0.0:8000
+      "
+    volumes:
+      - .:/app
+    ports:
+      - '8000:8000'
+    env_file:
+      - .env
+    depends_on:
+      db:
+        condition: service_healthy
       redis:
-        image: redis:latest
-        ports:
-          - 6379:6379
+        condition: service_started
 
-    env:
-      SECRET_KEY: ${{ secrets.SECRET_KEY }}
-      DEBUG: True
-      DB_NAME: django_project
-      DB_USER: postgres
-      DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
-      DB_HOST: 127.0.0.1
-      DB_PORT: 5432
-      STRIPE_API_KEY: ${{ secrets.STRIPE_API_KEY }}
-      EMAIL_HOST: smtp.yandex.ru
-      EMAIL_PORT: 465
-      EMAIL_HOST_USER: an5oldatova@yandex.ru
-      EMAIL_HOST_PASSWORD: ${{ secrets.EMAIL_HOST_PASSWORD }}
-      EMAIL_USE_TLS: False
-      EMAIL_USE_SSL: True
-      LOCATION: redis://127.0.0.1:6379
-      DJANGO_SETTINGS_MODULE: config.settings
+  celery:
+    build: .
+    command: celery -A config worker -l info
+    volumes:
+      - .:/app
+    env_file:
+      - .env
+    depends_on:
+      - redis
+      - db
+    restart: on-failure
 
-    steps:
-      - name: Check out code
-        uses: actions/checkout@v3
+  celery-beat:
+    build: .
+    command: celery -A config beat -l info
+    volumes:
+      - .:/app
+    env_file:
+      - .env
+    depends_on:
+      - redis
+      - db
+    restart: on-failure
 
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.10'
-
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
-
-      - name: Create .env file
-        run: |
-          echo "SECRET_KEY=$SECRET_KEY" > .env
-          echo "DEBUG=True" >> .env
-          echo "DB_NAME=django_project" >> .env
-          echo "DB_USER=postgres" >> .env
-          echo "DB_PASSWORD=$DB_PASSWORD" >> .env
-          echo "DB_HOST=127.0.0.1" >> .env
-          echo "DB_PORT=5432" >> .env
-          echo "STRIPE_API_KEY=$STRIPE_API_KEY" >> .env
-          echo "EMAIL_HOST=smtp.yandex.ru" >> .env
-          echo "EMAIL_PORT=465" >> .env
-          echo "EMAIL_HOST_USER=an5oldatova@yandex.ru" >> .env
-          echo "EMAIL_HOST_PASSWORD=$EMAIL_HOST_PASSWORD" >> .env
-          echo "EMAIL_USE_TLS=False" >> .env
-          echo "EMAIL_USE_SSL=True" >> .env
-          echo "LOCATION=redis://127.0.0.1:6379" >> .env
-
-      - name: Wait for Postgres
-        run: |
-          until pg_isready -h 127.0.0.1 -p 5432 -U postgres; do
-            echo "Waiting for postgres..."
-            sleep 2
-          done
-
-      - name: Run migrations
-        run: python manage.py migrate
-
-      - name: Run tests
-        run: python manage.py test
+volumes:
+  pg_data:
