--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,11 +16,11 @@ jobs:
 
     services:
       postgres:
-        image: postgres:13
+        image: postgres:15
         env:
-          POSTGRES_DB: mydatabase
-          POSTGRES_USER: postgres
-          POSTGRES_PASSWORD: mypassword
+          DB_NAME: DB_NAME
+          DB_USER: DB_USER
+          DB_PASSWORD: DB_PASSWORD
         ports:
           - 5432:5432
         options: >-
@@ -54,9 +54,9 @@ jobs:
       - name: Create .env file
         run: |
           echo "SECRET_KEY=$SECRET_KEY" > .env
-          echo "POSTGRES_DB=$POSTGRES_DB" >> .env
-          echo "POSTGRES_USER=$POSTGRES_USER" >> .env
-          echo "POSTGRES_PASSWORD=$POSTGRES_PASSWORD" >> .env
+          echo "DB_NAME=$DB_NAME" >> .env
+          echo "DB_USER=$DB_USER" >> .env
+          echo "DB_PASSWORD=$DB_PASSWORD" >> .env
           echo "DB_HOST=$DB_HOST" >> .env
           echo "DB_PORT=$DB_PORT" >> .env
 
