--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -14,9 +14,9 @@ services:
     env_file:
       - .env
     environment:
-      DB_NAME: ${DB_NAME}
-      DB_USER: ${DB_USER}
-      DB_PASSWORD: ${DB_PASSWORD}
+      POSTGRES_DB: ${DB_NAME}       # Используем DB_NAME из .env
+      POSTGRES_USER: ${DB_USER}     # Используем DB_USER из .env
+      POSTGRES_PASSWORD: ${DB_PASSWORD}  # Используем DB_PASSWORD из .env
     expose:
       - '5432'
     volumes:
