--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ django-celery-beat = "^2.7.0"
 [tool.poetry.group.lint.dependencies]
 black = "^25.1.0"
 isort = "^6.0.1"
+flake8 = "^7.2.0"
 
 [build-system]
 requires = ["poetry-core"]
