--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -25,7 +25,7 @@ services:
     expose:
       - "5432"
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U $POSTGRES_USER"]
+      test: ["CMD-SHELL", "pg_isready -U $DB_USER"]
       interval: 30s
       timeout: 10s
       retries: 5
@@ -40,7 +40,7 @@ services:
 
   celery:
     build: .
-    command: celery -A your_project_name worker --loglevel=info
+    command: celery -A Module8 worker --loglevel=info
     env_file:
       - .env
     depends_on:
@@ -51,7 +51,7 @@ services:
 
   celery-beat:
     build: .
-    command: celery -A your_project_name beat --loglevel=info
+    command: celery -A Module8 beat --loglevel=info
     env_file:
       - .env
     depends_on:
